fix(security): update dependencies to fix vulnerabilities
- Update electron from ^28.0.0 to ^35.0.0 (GHSA-vmqv-hx8q-j7mg)
- Update vitest from ^1.0.0 to ^3.0.0
- Add pnpm overrides to force esbuild>=0.25.0 and vite>=6.0.0 (GHSA-67mh-4wv8-2f99)
- Update @types/node to ^22.0.0
- Update electron-builder to ^25.0.0
- Update peerDependencies to electron>=33.0.0

--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "node": ">=20.0.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.15.0"
+  "packageManager": "pnpm@8.15.0",
+  "pnpm": {
+    "overrides": {
+      "esbuild": ">=0.25.0",
+      "vite": ">=6.0.0"
+    }
+  }
 }
 
